--- a/css/index-style.css
+++ b/css/index-style.css
@@ -774,8 +774,8 @@ nav, footer, header {
   position: absolute;
   -webkit-transform: translateY(-250%);
           transform: translateY(-250%);
-  top: 4vmax;
-  left: 10vmax;
+  --top: 4vmax;
+  --left: 10vmax;
 }
 .tree__leaves, .tree__trunk {
   margin: 0 auto;
@@ -861,10 +861,16 @@ nav, footer, header {
   --green:rgb(52,201,36);
   --dark-blue:rgb( 0,47,85);
 }
+.lightrope-tree__container {
+  width: 30vmin;
+  position: relative;
+  top: 0vmin;
+  left: -3vmin;
+}
 .lightrope-tree__item {
   -webkit-transform: translateY(-150vh);
           transform: translateY(-150vh);
-  position: relative;
+  position: absolute;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -894,58 +900,58 @@ nav, footer, header {
 .lightrope-tree__item:nth-child(1) {
   width: 40px;
   height: 40px;
-  background-color: rgb(243, 218, 11);
-  top: 120px;
-  left: 70px;
+  background-color: var(--yellow);
+  top: 35vmax;
+  left: 0vmax;
 }
 .lightrope-tree__item:nth-child(2) {
   width: 30px;
   height: 30px;
   background-color: var(--red);
-  top: 70px;
-  left: 20px;
+  top: 36vmax;
+  left: 8vmax;
 }
 .lightrope-tree__item:nth-child(3) {
   width: 40px;
   height: 40px;
   background-color: var(--green);
-  top: 90px;
-  left: 10px;
+  top: 26vmax;
+  left: 6vmax;
 }
 .lightrope-tree__item:nth-child(4) {
   width: 20px;
   height: 20px;
   background-color: var(--blue);
-  top: 120px;
-  left: 30px;
+  top: 21vmax;
+  left: 9vmax;
 }
 .lightrope-tree__item:nth-child(5) {
   width: 40px;
   height: 40px;
   background-color: var(--dark-blue);
-  top: 70px;
-  left: 65px;
+  top: 17vmax;
+  left: 5vmax;
 }
 .lightrope-tree__item:nth-child(6) {
   width: 40px;
   height: 40px;
   background-color: var(--red);
-  top: 125px;
-  left: 55px;
+  top: 29vmax;
+  left: 2vmax;
 }
 .lightrope-tree__item:nth-child(7) {
   width: 30px;
   height: 30px;
-  background-color: var(--yellow);
-  top: 100px;
-  left: 10px;
+  background-color: var(--dark-blue);
+  top: 39vmax;
+  left: 4vmax;
 }
 .lightrope-tree__item:nth-child(8) {
   width: 30px;
   height: 30px;
-  background-color: var(--dark-blue);
-  top: 90px;
-  left: 90px;
+  background-color: var(--yellow);
+  top: 30vmax;
+  left: 9vmax;
 }
 
 .lightrope-wall {
@@ -1146,6 +1152,16 @@ nav, footer, header {
     top: 69vmin;
     right: 20vmin;
   }
+  .lightrope-tree {
+    left: 25em;
+    top: 2.9em;
+  }
+  .lightrope-tree__container {
+    width: 30vmin;
+    position: relative;
+    top: 0vmin;
+    left: -3vmin;
+  }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .tree {
@@ -1164,49 +1180,11 @@ nav, footer, header {
     top: 35vmin;
     left: 14vmin;
   }
-  .lightrope-tree {
-    -webkit-transform: translateY(-250%);
-    transform: translateY(-250%);
-    left: 62vmin;
-    top: 17vmin;
-    opacity: 1;
-  }
   .gift {
     position: absolute;
-    top: 68vmin;
+    top: 75vmin;
     right: 22vmin;
   }
-  .buttons__home {
-    width: 20em;
-    height: 3em;
-    right: 2vmin;
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-    -webkit-animation: jumping 3s 6s ease-in-out forwards, lighting 3s 7s ease-in-out infinite;
-            animation: jumping 3s 6s ease-in-out forwards, lighting 3s 7s ease-in-out infinite;
-  }
-  @-webkit-keyframes lighting {
-    0% {
-      background-color: #DCDCDC;
-    }
-    50% {
-      background: #949494;
-    }
-    100% {
-      background-color: #DCDCDC;
-    }
-  }
-  @keyframes lighting {
-    0% {
-      background-color: #DCDCDC;
-    }
-    50% {
-      background: #949494;
-    }
-    100% {
-      background-color: #DCDCDC;
-    }
-  }
   @-webkit-keyframes jumping {
     0% {
       -webkit-transform: translateY(0%);
@@ -1221,16 +1199,16 @@ nav, footer, header {
               transform: translateY(200px);
     }
     60% {
-      -webkit-transform: translateY(400px);
-              transform: translateY(400px);
+      -webkit-transform: translateY(320px);
+              transform: translateY(320px);
     }
     80% {
       -webkit-transform: translateY(300px);
               transform: translateY(300px);
     }
     100% {
-      -webkit-transform: translateY(620px) rotate(360deg);
-              transform: translateY(620px) rotate(360deg);
+      -webkit-transform: translateY(320px) rotate(360deg);
+              transform: translateY(320px) rotate(360deg);
       width: 35vmin;
       height: 10vmin;
     }
@@ -1249,108 +1227,77 @@ nav, footer, header {
               transform: translateY(200px);
     }
     60% {
-      -webkit-transform: translateY(400px);
-              transform: translateY(400px);
+      -webkit-transform: translateY(320px);
+              transform: translateY(320px);
     }
     80% {
       -webkit-transform: translateY(300px);
               transform: translateY(300px);
     }
     100% {
-      -webkit-transform: translateY(620px) rotate(360deg);
-              transform: translateY(620px) rotate(360deg);
+      -webkit-transform: translateY(320px) rotate(360deg);
+              transform: translateY(320px) rotate(360deg);
       width: 35vmin;
       height: 10vmin;
     }
-  }
-  .buttons__home::after {
-    position: absolute;
-    content: "Адвент-календарь";
-    top: 5px;
-    left: 36px;
-    font-size: 18px;
-    opacity: 0;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .tree {
-    width: 50vmin;
-    height: 50vmin;
-    position: absolute;
-    -webkit-transform: translateY(-250%);
-            transform: translateY(-250%);
-    top: 1vmin;
-    left: 43vmin;
-  }
-  .santa {
-    width: 50vmin;
-    height: 50vmin;
-    position: absolute;
-    top: 30vmin;
-    left: 14vmin;
-  }
-  .lightrope-wall__container li {
-    position: relative;
-    -webkit-animation-fill-mode: both;
-            animation-fill-mode: both;
-    -webkit-animation-iteration-count: infinite;
-            animation-iteration-count: infinite;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: inline-block;
-    width: 5vmin;
-    height: 5vmin;
-    border-radius: 50%;
-    margin: 12px;
-    background: var(--dark-blue);
-    -webkit-box-shadow: 0px 4.66667px 24px 3px var(--dark-blue);
-            box-shadow: 0px 4.66667px 24px 3px var(--dark-blue);
-    -webkit-animation: flash-1 2s infinite;
-            animation: flash-1 2s infinite;
   }
   .lightrope-tree {
-    -webkit-transform: translateY(-250%);
-    transform: translateY(-250%);
-    left: 60vmin;
-    top: 10vmin;
-    opacity: 1;
+    left: 59vmin;
+    top: 3vmin;
   }
+  .lightrope-tree__container {
+    width: 30vmin;
+    height: 8vmin;
+    position: relative;
+    top: 1vmin;
+    left: -3vmin;
+  }
+}
+@media (max-width: 991px) and (min-width: 768px) {
   .gift {
     position: absolute;
-    top: 67vmin;
+    top: 104vmin;
     right: 15vmin;
   }
-  .buttons__home {
-    width: 20em;
-    height: 3em;
-    right: 2vmin;
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-    -webkit-animation: jumping 3s 6s ease-in-out forwards, lighting 3s 7s ease-in-out infinite;
-            animation: jumping 3s 6s ease-in-out forwards, lighting 3s 7s ease-in-out infinite;
+  .tree {
+    width: 126vmin;
+    height: 98vmin;
   }
-  @-webkit-keyframes lighting {
-    0% {
-      background-color: #DCDCDC;
-    }
-    50% {
-      background: #949494;
-    }
-    100% {
-      background-color: #DCDCDC;
-    }
+  .lightrope-tree {
+    width: 30vmin;
+    height: 8vmin;
+    position: relative;
+    top: 31vmin;
+    left: 57vmin;
   }
-  @keyframes lighting {
-    0% {
-      background-color: #DCDCDC;
-    }
-    50% {
-      background: #949494;
-    }
-    100% {
-      background-color: #DCDCDC;
-    }
+  .lightrope-tree__item:nth-child(1) {
+    top: 48vmin;
+    left: -2vmin;
+  }
+  .lightrope-tree__item:nth-child(2) {
+    top: 51vmin;
+    left: 11vmin;
+  }
+  .lightrope-tree__item:nth-child(3) {
+    top: 33vmin;
+    left: 6vmin;
+  }
+  .lightrope-tree__item:nth-child(4) {
+    top: 29vmin;
+  }
+  .lightrope-tree__item:nth-child(5) {
+    top: 16vmin;
+    left: 4vmin;
+  }
+  .lightrope-tree__item:nth-child(6) {
+    top: 28vmin;
+  }
+  .lightrope-tree__item:nth-child(7) {
+    top: 44vmin;
+  }
+  .lightrope-tree__item:nth-child(8) {
+    left: 9vmin;
+    top: 12vmin;
   }
   @-webkit-keyframes jumping {
     0% {
@@ -1366,16 +1313,16 @@ nav, footer, header {
               transform: translateY(200px);
     }
     60% {
-      -webkit-transform: translateY(400px);
-              transform: translateY(400px);
+      -webkit-transform: translateY(700px);
+              transform: translateY(700px);
     }
     80% {
       -webkit-transform: translateY(300px);
               transform: translateY(300px);
     }
     100% {
-      -webkit-transform: translateY(600px) rotate(360deg);
-              transform: translateY(600px) rotate(360deg);
+      -webkit-transform: translateY(730px) rotate(360deg);
+              transform: translateY(730px) rotate(360deg);
       width: 35vmin;
       height: 10vmin;
     }
@@ -1394,27 +1341,19 @@ nav, footer, header {
               transform: translateY(200px);
     }
     60% {
-      -webkit-transform: translateY(400px);
-              transform: translateY(400px);
+      -webkit-transform: translateY(700px);
+              transform: translateY(700px);
     }
     80% {
       -webkit-transform: translateY(300px);
               transform: translateY(300px);
     }
     100% {
-      -webkit-transform: translateY(600px) rotate(360deg);
-              transform: translateY(600px) rotate(360deg);
+      -webkit-transform: translateY(730px) rotate(360deg);
+              transform: translateY(730px) rotate(360deg);
       width: 35vmin;
       height: 10vmin;
     }
-  }
-  .buttons__home::after {
-    position: absolute;
-    content: "Адвент-календарь";
-    top: 5px;
-    left: 36px;
-    font-size: 18px;
-    opacity: 0;
   }
 }
 @media (max-width: 767px) and (min-width: 650px) {
@@ -1435,47 +1374,47 @@ nav, footer, header {
     left: 14vmin;
   }
   .lightrope-tree {
-    -webkit-transform: translateY(-250%);
-            transform: translateY(-250%);
-    left: 55vmin;
-    top: 7vmin;
-    opacity: 1;
+    left: 52vmin;
+    top: 1vmin;
+  }
+  .lightrope-tree__container {
+    top: 18vmin;
+    left: 1vmin;
+  }
+  .lightrope-tree__item:nth-child(1) {
+    top: 48vmin;
+    left: -2vmin;
+  }
+  .lightrope-tree__item:nth-child(2) {
+    top: 47vmin;
+    left: 12vmin;
+  }
+  .lightrope-tree__item:nth-child(3) {
+    top: 33vmin;
+    left: 6vmin;
+  }
+  .lightrope-tree__item:nth-child(4) {
+    top: 24vmin;
+  }
+  .lightrope-tree__item:nth-child(5) {
+    top: 16vmin;
+    left: 4vmin;
+  }
+  .lightrope-tree__item:nth-child(6) {
+    top: 32vmin;
+    left: 0vmin;
+  }
+  .lightrope-tree__item:nth-child(7) {
+    top: 44vmin;
+  }
+  .lightrope-tree__item:nth-child(8) {
+    left: 9vmin;
+    top: 12vmin;
   }
   .gift {
     position: absolute;
-    top: 73vmin;
-    right: 15vmin;
-  }
-  .buttons__home {
-    width: 20em;
-    height: 3em;
-    right: 2vmin;
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-    -webkit-animation: jumping 3s 6s ease-in-out forwards, lighting 3s 7s ease-in-out infinite;
-            animation: jumping 3s 6s ease-in-out forwards, lighting 3s 7s ease-in-out infinite;
-  }
-  @-webkit-keyframes lighting {
-    0% {
-      background-color: #DCDCDC;
-    }
-    50% {
-      background: #949494;
-    }
-    100% {
-      background-color: #DCDCDC;
-    }
-  }
-  @keyframes lighting {
-    0% {
-      background-color: #DCDCDC;
-    }
-    50% {
-      background: #949494;
-    }
-    100% {
-      background-color: #DCDCDC;
-    }
+    top: 80vmin;
+    right: 78vmin;
   }
   @-webkit-keyframes jumping {
     0% {
@@ -1499,8 +1438,8 @@ nav, footer, header {
               transform: translateY(300px);
     }
     100% {
-      -webkit-transform: translateY(600px) rotate(360deg);
-              transform: translateY(600px) rotate(360deg);
+      -webkit-transform: translateY(500px) rotate(360deg);
+              transform: translateY(500px) rotate(360deg);
       width: 35vmin;
       height: 10vmin;
     }
@@ -1527,19 +1466,11 @@ nav, footer, header {
               transform: translateY(300px);
     }
     100% {
-      -webkit-transform: translateY(600px) rotate(360deg);
-              transform: translateY(600px) rotate(360deg);
+      -webkit-transform: translateY(500px) rotate(360deg);
+              transform: translateY(500px) rotate(360deg);
       width: 35vmin;
       height: 10vmin;
     }
-  }
-  .buttons__home::after {
-    position: absolute;
-    content: "Адвент-календарь";
-    top: 5px;
-    left: 36px;
-    font-size: 18px;
-    opacity: 0;
   }
 }
 @media (max-width: 650px) and (min-width: 481px) {
@@ -1561,39 +1492,8 @@ nav, footer, header {
   }
   .gift {
     position: absolute;
-    top: 93vmin;
-    right: 72vmin;
-  }
-  .buttons__home {
-    width: 20em;
-    height: 3em;
-    right: 2vmin;
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-    -webkit-animation: jumping 3s 6s ease-in-out forwards, lighting 3s 7s ease-in-out infinite;
-            animation: jumping 3s 6s ease-in-out forwards, lighting 3s 7s ease-in-out infinite;
-  }
-  @-webkit-keyframes lighting {
-    0% {
-      background-color: #DCDCDC;
-    }
-    50% {
-      background: #949494;
-    }
-    100% {
-      background-color: #DCDCDC;
-    }
-  }
-  @keyframes lighting {
-    0% {
-      background-color: #DCDCDC;
-    }
-    50% {
-      background: #949494;
-    }
-    100% {
-      background-color: #DCDCDC;
-    }
+    top: 90vmin;
+    right: 78vmin;
   }
   @-webkit-keyframes jumping {
     0% {
@@ -1617,8 +1517,8 @@ nav, footer, header {
               transform: translateY(300px);
     }
     100% {
-      -webkit-transform: translateY(600px) rotate(360deg);
-              transform: translateY(600px) rotate(360deg);
+      -webkit-transform: translateY(500px) rotate(360deg);
+              transform: translateY(500px) rotate(360deg);
       width: 35vmin;
       height: 10vmin;
     }
@@ -1645,48 +1545,44 @@ nav, footer, header {
               transform: translateY(300px);
     }
     100% {
-      -webkit-transform: translateY(600px) rotate(360deg);
-              transform: translateY(600px) rotate(360deg);
+      -webkit-transform: translateY(500px) rotate(360deg);
+              transform: translateY(500px) rotate(360deg);
       width: 35vmin;
       height: 10vmin;
     }
   }
-  .buttons__home::after {
-    position: absolute;
-    content: "Адвент-календарь";
-    top: 5px;
-    left: 36px;
-    font-size: 18px;
-    opacity: 0;
-  }
-}
-@media (max-width: 480px) {
-  .tree {
-    width: 50vmin;
-    height: 50vmin;
-    position: absolute;
-    -webkit-transform: translateY(-250%);
-            transform: translateY(-250%);
-    top: 40vmin;
-    left: 35vmin;
-  }
-  .santa {
-    width: 50vmin;
-    height: 50vmin;
-    position: absolute;
-    top: 65vmin;
-    left: 14vmin;
-  }
   .lightrope-tree {
-    -webkit-transform: translateY(-250%);
-            transform: translateY(-250%);
-    left: 47vmin;
-    top: 10vmin;
-    opacity: 1;
+    left: 56vmin;
+    top: 30.8vmin;
   }
-  .gift {
-    position: absolute;
-    top: 112vmin;
-    right: 78vmin;
+  .lightrope-tree__item:nth-child(1) {
+    top: 48vmin;
+    left: -2vmin;
+  }
+  .lightrope-tree__item:nth-child(2) {
+    top: 48vmin;
+    left: 13vmin;
+  }
+  .lightrope-tree__item:nth-child(3) {
+    top: 31vmin;
+    left: 9vmin;
+  }
+  .lightrope-tree__item:nth-child(4) {
+    top: 25vmin;
+  }
+  .lightrope-tree__item:nth-child(5) {
+    top: 16vmin;
+    left: 4vmin;
+  }
+  .lightrope-tree__item:nth-child(6) {
+    top: 33vmin;
+    left: 0vmin;
+  }
+  .lightrope-tree__item:nth-child(7) {
+    top: 44vmin;
+  }
+  .lightrope-tree__item:nth-child(8) {
+    left: 9vmin;
+    top: 12vmin;
   }
 }
