--- a/css/index-style.css
+++ b/css/index-style.css
@@ -1153,14 +1153,70 @@ nav, footer, header {
     right: 20vmin;
   }
   .lightrope-tree {
-    left: 25em;
-    top: 2.9em;
+    left: 55vmin;
+    top: -4vmin;
   }
   .lightrope-tree__container {
     width: 30vmin;
     position: relative;
     top: 0vmin;
     left: -3vmin;
+  }
+  @-webkit-keyframes jumping {
+    0% {
+      -webkit-transform: translateY(0%);
+              transform: translateY(0%);
+    }
+    20% {
+      -webkit-transform: translateY(400px);
+              transform: translateY(400px);
+    }
+    40% {
+      -webkit-transform: translateY(200px);
+              transform: translateY(200px);
+    }
+    60% {
+      -webkit-transform: translateY(220px);
+              transform: translateY(220px);
+    }
+    80% {
+      -webkit-transform: translateY(300px);
+              transform: translateY(300px);
+    }
+    100% {
+      -webkit-transform: translateY(220px) rotate(360deg);
+              transform: translateY(220px) rotate(360deg);
+      width: 35vmin;
+      height: 10vmin;
+    }
+  }
+  @keyframes jumping {
+    0% {
+      -webkit-transform: translateY(0%);
+              transform: translateY(0%);
+    }
+    20% {
+      -webkit-transform: translateY(400px);
+              transform: translateY(400px);
+    }
+    40% {
+      -webkit-transform: translateY(200px);
+              transform: translateY(200px);
+    }
+    60% {
+      -webkit-transform: translateY(220px);
+              transform: translateY(220px);
+    }
+    80% {
+      -webkit-transform: translateY(300px);
+              transform: translateY(300px);
+    }
+    100% {
+      -webkit-transform: translateY(220px) rotate(360deg);
+              transform: translateY(220px) rotate(360deg);
+      width: 35vmin;
+      height: 10vmin;
+    }
   }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
@@ -1242,8 +1298,8 @@ nav, footer, header {
     }
   }
   .lightrope-tree {
-    left: 59vmin;
-    top: 3vmin;
+    left: 52vmin;
+    top: 14vmin;
   }
   .lightrope-tree__container {
     width: 30vmin;
@@ -1255,9 +1311,8 @@ nav, footer, header {
 }
 @media (max-width: 991px) and (min-width: 768px) {
   .gift {
-    position: absolute;
-    top: 104vmin;
-    right: 15vmin;
+    top: 78vmin;
+    right: -9vmin;
   }
   .tree {
     width: 126vmin;
@@ -1313,16 +1368,16 @@ nav, footer, header {
               transform: translateY(200px);
     }
     60% {
-      -webkit-transform: translateY(700px);
-              transform: translateY(700px);
+      -webkit-transform: translateY(460px);
+              transform: translateY(460px);
     }
     80% {
       -webkit-transform: translateY(300px);
               transform: translateY(300px);
     }
     100% {
-      -webkit-transform: translateY(730px) rotate(360deg);
-              transform: translateY(730px) rotate(360deg);
+      -webkit-transform: translateY(450px) rotate(360deg);
+              transform: translateY(450px) rotate(360deg);
       width: 35vmin;
       height: 10vmin;
     }
@@ -1341,16 +1396,16 @@ nav, footer, header {
               transform: translateY(200px);
     }
     60% {
-      -webkit-transform: translateY(700px);
-              transform: translateY(700px);
+      -webkit-transform: translateY(460px);
+              transform: translateY(460px);
     }
     80% {
       -webkit-transform: translateY(300px);
               transform: translateY(300px);
     }
     100% {
-      -webkit-transform: translateY(730px) rotate(360deg);
-              transform: translateY(730px) rotate(360deg);
+      -webkit-transform: translateY(450px) rotate(360deg);
+              transform: translateY(450px) rotate(360deg);
       width: 35vmin;
       height: 10vmin;
     }
@@ -1554,6 +1609,118 @@ nav, footer, header {
   .lightrope-tree {
     left: 56vmin;
     top: 30.8vmin;
+  }
+  .lightrope-tree__item:nth-child(1) {
+    top: 48vmin;
+    left: -2vmin;
+  }
+  .lightrope-tree__item:nth-child(2) {
+    top: 48vmin;
+    left: 13vmin;
+  }
+  .lightrope-tree__item:nth-child(3) {
+    top: 31vmin;
+    left: 9vmin;
+  }
+  .lightrope-tree__item:nth-child(4) {
+    top: 25vmin;
+  }
+  .lightrope-tree__item:nth-child(5) {
+    top: 16vmin;
+    left: 4vmin;
+  }
+  .lightrope-tree__item:nth-child(6) {
+    top: 33vmin;
+    left: 0vmin;
+  }
+  .lightrope-tree__item:nth-child(7) {
+    top: 44vmin;
+  }
+  .lightrope-tree__item:nth-child(8) {
+    left: 9vmin;
+    top: 12vmin;
+  }
+}
+@media (max-width: 650px) and (min-width: 300px) and (min-height: 747px) {
+  .tree {
+    width: 50vmin;
+    height: 50vmin;
+    position: absolute;
+    -webkit-transform: translateY(-250%);
+            transform: translateY(-250%);
+    top: 44vmin;
+    left: 38vmin;
+  }
+  .santa {
+    width: 50vmin;
+    height: 50vmin;
+    position: absolute;
+    top: 70vmin;
+    left: 14vmin;
+  }
+  .gift {
+    top: 133vmin;
+    right: 66vmin;
+  }
+  @-webkit-keyframes jumping {
+    0% {
+      -webkit-transform: translateY(0%);
+              transform: translateY(0%);
+    }
+    20% {
+      -webkit-transform: translateY(400px);
+              transform: translateY(400px);
+    }
+    40% {
+      -webkit-transform: translateY(200px);
+              transform: translateY(200px);
+    }
+    60% {
+      -webkit-transform: translateY(530px);
+              transform: translateY(530px);
+    }
+    80% {
+      -webkit-transform: translateY(300px);
+              transform: translateY(300px);
+    }
+    100% {
+      -webkit-transform: translateY(530px) rotate(360deg);
+              transform: translateY(530px) rotate(360deg);
+      width: 35vmin;
+      height: 10vmin;
+    }
+  }
+  @keyframes jumping {
+    0% {
+      -webkit-transform: translateY(0%);
+              transform: translateY(0%);
+    }
+    20% {
+      -webkit-transform: translateY(400px);
+              transform: translateY(400px);
+    }
+    40% {
+      -webkit-transform: translateY(200px);
+              transform: translateY(200px);
+    }
+    60% {
+      -webkit-transform: translateY(530px);
+              transform: translateY(530px);
+    }
+    80% {
+      -webkit-transform: translateY(300px);
+              transform: translateY(300px);
+    }
+    100% {
+      -webkit-transform: translateY(530px) rotate(360deg);
+              transform: translateY(530px) rotate(360deg);
+      width: 35vmin;
+      height: 10vmin;
+    }
+  }
+  .lightrope-tree {
+    left: 55vmin;
+    top: 53.8vmin;
   }
   .lightrope-tree__item:nth-child(1) {
     top: 48vmin;
