--- a/#source/index-style.scss
+++ b/#source/index-style.scss
@@ -530,7 +530,7 @@
   transform: translateX(0);
   opacity:1;
   width: 150%;
-  height: 100vh;
+  height: 737px;
   padding: 0;
   margin:0;
   background: rgb(255,243,145);
